# HDA_Project

./: .gitignore  BoneAgePrediction.ipynb  BoneAgePredictionProject.ipynb  HDA_Project.ipynb  README.md  main.py  pyproject.toml  requirements.txt
data/metadata/: test.csv  train.csv
experiments/: train_results_summary.csv
experiments/checkpoints/B0_GlobalCNN/global_only/B0_GlobalCNN_global_only_01/: B0_GlobalCNN_best.keras
experiments/checkpoints/B0_GlobalCNN/global_only/B0_GlobalCNN_global_only_02/: B0_GlobalCNN_best.keras
experiments/checkpoints/B0_GlobalCNN/global_only/B0_GlobalCNN_global_only_03/: B0_GlobalCNN_best.keras  B0_GlobalCNN_training_log.csv
experiments/configs/: clahe.yaml  fusion.yaml  global_only.yaml  global_rect.yaml  roi_only.yaml
model_checkpoint/: GlobalCNN_Gender_best.keras  model_metrics.json  model_results.json
src/BAP/: __init__.py
src/BAP/models/: Fusion_CNN.py  Global_CNN.py  ROI_CNN.py
src/BAP/roi/: ROI_extract.py  ROI_locator.py
src/BAP/training/: callbacks.py  summary.py  train_Fusion_CNN.py  train_GlobalCNN.py  train_ROI_CNN.py
src/BAP/utils/: config.py  dataset_loader.py  logger.py  path_manager.py  seeds.py
src/BAP/visualization/: gradcam.py  overlay.py  plots.py
src/BoneAgePrediction/data/: dataset_loader.py  preprocess.py
src/BoneAgePrediction/models/: B0_global_cnn.py  Fusion_CNN.py  Global_CNN.py  R1_roi_cnn.py  ROI_CNN.py  base_blocks.py  global_cnn.py
src/BoneAgePrediction/roi/: ROI_extract.py  ROI_locator.py  roi_extract.py  roi_locator.py
src/BoneAgePrediction/training/: callbacks.py  losses.py  metrics.py  summary.py  train.py  train_B0.py  train_Fusion_CNN.py  train_GlobalCNN.py  train_R1.py  train_ROI_CNN.py
src/BoneAgePrediction/utils/: config.py  dataset_loader.py  logger.py  path_manager.py  seeds.py
src/BoneAgePrediction/visualization/: gradcam.py  overlay.py
src/data/: dataset_loader.py  preprocess.py
src/models/: base_blocks.py  global_cnn.py
src/training/: losses.py  metrics.py
src/utils/: config.py  logger.py  seeds.py
tests/: test_smoke_dataloader.py  test_smoke_global_cnn.py  test_smoke_roi_cnn.py
(+38 files in other folders)
