[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bone-age-prediction"
version = "0.1.0"
description = "Training pipeline and utilities for Bone Age Prediction."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Zeynep Tutar" }]
dependencies = [
    "pandas",
    "numpy",
    "opencv-python",
    "tensorflow",
    "tqdm",
    "keras",
    "ipython",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "pyyaml",
    "seaborn",
    "kagglehub[pandas-datasets]",
    "pydot",
    "graphviz",
]

